--- a/index.html
+++ b/index.html
@@ -4,9 +4,14 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <link rel="stylesheet" href="style.css">
+  <title>Manon's Admin Dashboard</title>
 </head>
 <body>
-  
+  <div class="container">
+    <div class="header">header</div>
+    <div class="sidebar">sidebar</div>
+    <div class="content">content</div>
+  </div>
 </body>
 </html>
