--- a/index.html
+++ b/index.html
@@ -9,9 +9,29 @@
 </head>
 <body>
   <div class="container">
+
     <div class="header">header</div>
-    <div class="sidebar">sidebar</div>
+
+    <div class="sidebar">
+      <div class="logo">Dashboard</div>
+      <ul class="navigation">
+        <li>Home</li>
+        <li>Profile</li>
+        <li>Messages</li>
+        <li>History</li>
+        <li>Tasks</li>
+        <li>Communties</li>
+      </ul>
+      <div class="spacing"></div> <!--consider padding instead but this seems like a neat solution to stick with grid and keep similar proportions throughout-->
+      <ul class="branding">
+        <li>Settings</li>
+        <li>Support</li>
+        <li>Privacy</li>
+      </ul>
+    </div>
+
     <div class="content">content</div>
+
   </div>
 </body>
 </html>
