--- a/index.html
+++ b/index.html
@@ -10,7 +10,20 @@
 <body>
   <div class="container">
 
-    <div class="header">header</div>
+    <div class="header">
+      <div class="header-top">
+        <div class="search">
+          <div class="magnify-icon">M.glass</div>
+          <div class="searchbar"></div>
+        </div>
+        <div class="profile">
+          <div class="bell-icon">Bell</div>
+          <div class="avatar-icon">icon</div>
+          <div class="name">My Name</div>
+        </div>
+      </div>
+      <div class="header-bottom">bottom</div>
+    </div>
 
     <div class="sidebar">
       <div class="logo">Dashboard</div>
