style bottom section of header

--- a/index.html
+++ b/index.html
@@ -22,7 +22,20 @@
           <div class="name">My Name</div>
         </div>
       </div>
-      <div class="header-bottom">bottom</div>
+      <div class="header-bottom">
+        <div class="profile-card">
+          <div class="big-avatar">ICON</div>
+          <div class="greeting">
+            <div class="hi">Hi there,</div>
+            <div class="name-handle">My Name (@my-name)</div>
+          </div>
+        </div>
+        <div class="buttons">
+          <button>New</button>
+          <button>Upload</button>
+          <button>Share</button>
+        </div>
+      </div>
     </div>
 
     <div class="sidebar">
