add cards and edit sidebar styling with dividers

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
         <div class="profile-card">
           <div class="big-avatar">ICON</div>
           <div class="greeting">
-            <div class="hi">Hi there,</div>
-            <div class="name-handle">My Name (@my-name)</div>
+            <div class="hi">Hello,</div>
+            <div class="name-handle">My Name (@is-what)</div>
           </div>
         </div>
         <div class="buttons">
@@ -40,6 +40,7 @@
 
     <div class="sidebar">
       <div class="logo">Dashboard</div>
+      <hr class="divider">
       <ul class="navigation">
         <li>Home</li>
         <li>Profile</li>
@@ -48,7 +49,7 @@
         <li>Tasks</li>
         <li>Communties</li>
       </ul>
-      <div class="spacing"></div> <!--consider padding instead but this seems like a neat solution to stick with grid and keep similar proportions throughout-->
+      <hr class="divider">
       <ul class="branding">
         <li>Settings</li>
         <li>Support</li>
@@ -56,7 +57,18 @@
       </ul>
     </div>
 
-    <div class="content">content</div>
+    <div class="content">
+      <div class="projects">
+        <div class="your-projects">Your projects</div>
+        <div class="cards">card1</div>
+        <div class="cards">card2</div>
+        <div class="cards">card3</div>
+        <div class="cards">card4</div>
+        <div class="cards">card5</div>
+        <div class="cards">card6</div>
+      </div>
+      <div class="content-right"></div>
+    </div>
 
   </div>
 </body>
