--- a/index.html
+++ b/index.html
@@ -60,16 +60,63 @@
     <div class="content">
       <div class="projects">
         <div class="your-projects">Your projects</div>
-        <div class="cards">card1</div>
-        <div class="cards">card2</div>
-        <div class="cards">card3</div>
-        <div class="cards">card4</div>
-        <div class="cards">card5</div>
-        <div class="cards">card6</div>
+        <div class="cards">
+          <div class="project-title">Project Title</div>
+          <p class="project-description">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam."</p>
+          <div class="project-icons">
+            <div>1</div>
+            <div>2</div>
+            <div>3</div>
+          </div>
+        </div>
+        <div class="cards">
+          <div class="project-title">Project Title</div>
+          <p class="project-description">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam."</p>
+          <div class="project-icons">
+            <div>1</div>
+            <div>2</div>
+            <div>3</div>
+          </div>
+        </div>
+        <div class="cards">
+          <div class="project-title">Project Title</div>
+          <p class="project-description">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam."</p>
+          <div class="project-icons">
+            <div>1</div>
+            <div>2</div>
+            <div>3</div>
+          </div>
+        </div>
+        <div class="cards">
+          <div class="project-title">Project Title</div>
+          <p class="project-description">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam."</p>
+          <div class="project-icons">
+            <div>1</div>
+            <div>2</div>
+            <div>3</div>
+          </div>
+        </div>
+        <div class="cards">
+          <div class="project-title">Project Title</div>
+          <p class="project-description">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam."</p>
+          <div class="project-icons">
+            <div>1</div>
+            <div>2</div>
+            <div>3</div>
+          </div>
+        </div>
+        <div class="cards">
+          <div class="project-title">Project Title</div>
+          <p class="project-description">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam."</p>
+          <div class="project-icons">
+            <div>1</div>
+            <div>2</div>
+            <div>3</div>
+          </div>
+        </div>
       </div>
       <div class="content-right"></div>
     </div>
-
   </div>
 </body>
 </html>
