--- a/index.html
+++ b/index.html
@@ -60,62 +60,89 @@
     <div class="content">
       <div class="projects">
         <div class="your-projects">Your projects</div>
-        <div class="cards">
-          <div class="project-title">Project Title</div>
-          <p class="project-description">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam."</p>
-          <div class="project-icons">
-            <div>1</div>
-            <div>2</div>
-            <div>3</div>
+        <div class="card-container">
+          <div class="cards">
+            <div class="project-title">Project Title</div>
+            <p class="project-description">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam."</p>
+            <div class="project-icons">
+              <div>1</div>
+              <div>2</div>
+              <div>3</div>
+            </div>
+          </div>
+          <div class="cards">
+            <div class="project-title">Project Title</div>
+            <p class="project-description">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam."</p>
+            <div class="project-icons">
+              <div>1</div>
+              <div>2</div>
+              <div>3</div>
+            </div>
+          </div>
+          <div class="cards">
+            <div class="project-title">Project Title</div>
+            <p class="project-description">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam."</p>
+            <div class="project-icons">
+              <div>1</div>
+              <div>2</div>
+              <div>3</div>
+            </div>
+          </div>
+          <div class="cards">
+            <div class="project-title">Project Title</div>
+            <p class="project-description">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam."</p>
+            <div class="project-icons">
+              <div>1</div>
+              <div>2</div>
+              <div>3</div>
+            </div>
+          </div>
+          <div class="cards">
+            <div class="project-title">Project Title</div>
+            <p class="project-description">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam."</p>
+            <div class="project-icons">
+              <div>1</div>
+              <div>2</div>
+              <div>3</div>
+            </div>
+          </div>
+          <div class="cards">
+            <div class="project-title">Project Title</div>
+            <p class="project-description">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam."</p>
+            <div class="project-icons">
+              <div>1</div>
+              <div>2</div>
+              <div>3</div>
+            </div>
+          </div>
+                </div>
+        </div>
+      <div class="content-right">
+        <div class="announcements">Announcements</div>
+        <div class="announcement-card">
+          <div class="message">
+            <div class="message-title">announcement</div>
+            <div class="message-body">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt</div>
+          </div>
+          <hr class="divider">
+          <div class="message">
+            <div class="message-title">announcement</div>
+            <div class="message-body">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt</div>
+          </div>
+          <hr class="divider">
+          <div class="message">
+            <div class="message-title">announcement</div>
+            <div class="message-body">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt</div>
           </div>
         </div>
-        <div class="cards">
-          <div class="project-title">Project Title</div>
-          <p class="project-description">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam."</p>
-          <div class="project-icons">
-            <div>1</div>
-            <div>2</div>
-            <div>3</div>
-          </div>
+        <div class="trending">Trending</div>
+        <div class="trending-card">
+          <div class="random-users">random user 1</div>
+          <div class="random-users">random user 2</div>
+          <div class="random-users">random user 3</div>
+          <div class="random-users">random user 4</div>
         </div>
-        <div class="cards">
-          <div class="project-title">Project Title</div>
-          <p class="project-description">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam."</p>
-          <div class="project-icons">
-            <div>1</div>
-            <div>2</div>
-            <div>3</div>
-          </div>
-        </div>
-        <div class="cards">
-          <div class="project-title">Project Title</div>
-          <p class="project-description">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam."</p>
-          <div class="project-icons">
-            <div>1</div>
-            <div>2</div>
-            <div>3</div>
-          </div>
-        </div>
-        <div class="cards">
-          <div class="project-title">Project Title</div>
-          <p class="project-description">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam."</p>
-          <div class="project-icons">
-            <div>1</div>
-            <div>2</div>
-            <div>3</div>
-          </div>
-        </div>
-        <div class="cards">
-          <div class="project-title">Project Title</div>
-          <p class="project-description">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam."</p>
-          <div class="project-icons">
-            <div>1</div>
-            <div>2</div>
-            <div>3</div>
-          </div>
-        </div>
-      </div>
-      <div class="content-right"></div>
+      </div> 
     </div>
   </div>
 </body>
