--- a/index.html
+++ b/index.html
@@ -137,10 +137,34 @@
         </div>
         <div class="trending">Trending</div>
         <div class="trending-card">
-          <div class="random-users">random user 1</div>
-          <div class="random-users">random user 2</div>
-          <div class="random-users">random user 3</div>
-          <div class="random-users">random user 4</div>
+          <div class="random-users">
+            <div class="trending-avatar">AV</div>
+            <div class="username-and-handle">
+              <div class="handle">@name</div>
+              <div class="username">username</div>
+            </div>
+          </div>
+          <div class="random-users">
+            <div class="trending-avatar">AV</div>
+            <div class="username-and-handle">
+              <div class="handle">@name</div>
+              <div class="username">username</div>
+            </div>
+          </div>
+          <div class="random-users">
+            <div class="trending-avatar">AV</div>
+            <div class="username-and-handle">
+              <div class="handle">@name</div>
+              <div class="username">username</div>
+            </div>
+          </div>
+          <div class="random-users">
+            <div class="trending-avatar">AV</div>
+            <div class="username-and-handle">
+              <div class="handle">@name</div>
+              <div class="username">username</div>
+            </div>
+          </div>
         </div>
       </div> 
     </div>
