add icons to sidebar

--- a/index.html
+++ b/index.html
@@ -39,21 +39,21 @@
     </div>
 
     <div class="sidebar">
-      <div class="logo">Dashboard</div>
+      <div class="dashboard"><img src="./resources/view-dashboard.svg" alt="icon of a dasboard" width="35px">Dashboard</div>
       <hr class="divider">
       <ul class="navigation">
-        <li>Home</li>
-        <li>Profile</li>
-        <li>Messages</li>
-        <li>History</li>
-        <li>Tasks</li>
-        <li>Communties</li>
+        <li><img src="./resources/home.svg" alt="icon of a house" width="35px">Home</li>
+        <li><img src="./resources/card-account-details-outline.svg" alt="icon of a contact card" width="35px">Profile</li>
+        <li><img src="./resources/message.svg" alt="icon of a chat bubble" width="35px">Messages</li>
+        <li><img src="./resources/clock-time-three.svg" alt="icon of a clock" width="35px">History</li>
+        <li><img src="./resources/checkbox-multiple-outline.svg" alt="icon of a checkbox" width="35px">Tasks</li>
+        <li><img src="./resources/account-group.svg" alt="icon of a group of people" width="35px">Communties</li>
       </ul>
       <hr class="divider">
       <ul class="branding">
-        <li>Settings</li>
-        <li>Support</li>
-        <li>Privacy</li>
+        <li><img src="./resources/cog.svg" alt="icon of cogwheel" width="35px">Settings</li>
+        <li><img src="./resources/face-agent.svg" alt="icon of a support agent" width="35px">Support</li>
+        <li><img src="./resources/shield-check.svg" alt="icon of a group of people" width="35px">Privacy</li>
       </ul>
     </div>
 
