add icons to search bar and project cards

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <div class="header">
       <div class="header-top">
         <div class="search">
-          <div class="magnify-icon">M.glass</div>
-          <div class="searchbar"></div>
+          <div class="magnify-icon"><img src="./resources/magnify.svg" alt="icon of a group of people" width="35px"></div>
+          <input type="text" placeholder="   Search..." class="searchbar"></input>
         </div>
         <div class="profile">
           <div class="bell-icon">Bell</div>
@@ -65,55 +65,50 @@
             <div class="project-title">Project Title</div>
             <p class="project-description">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam."</p>
             <div class="project-icons">
-              <div>1</div>
-              <div>2</div>
-              <div>3</div>
+              <img src="./resources/star-plus-outline.svg" alt="icon of a star" width="30px">
+              <img src="./resources/eye-plus-outline.svg" alt="icon of an eye" width="30px">
+              <img src="./resources/share-variant-outline.svg" alt="icon of sharing symbol" width="30px">
             </div>
           </div>
           <div class="cards">
             <div class="project-title">Project Title</div>
             <p class="project-description">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam."</p>
             <div class="project-icons">
-              <div>1</div>
-              <div>2</div>
-              <div>3</div>
-            </div>
+              <img src="./resources/star-plus-outline.svg" alt="icon of a star" width="30px">
+              <img src="./resources/eye-plus-outline.svg" alt="icon of an eye" width="30px">
+              <img src="./resources/share-variant-outline.svg" alt="icon of sharing symbol" width="30px">            </div>
           </div>
           <div class="cards">
             <div class="project-title">Project Title</div>
             <p class="project-description">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam."</p>
             <div class="project-icons">
-              <div>1</div>
-              <div>2</div>
-              <div>3</div>
-            </div>
+              <img src="./resources/star-plus-outline.svg" alt="icon of a star" width="30px">
+              <img src="./resources/eye-plus-outline.svg" alt="icon of an eye" width="30px">
+              <img src="./resources/share-variant-outline.svg" alt="icon of sharing symbol" width="30px">            </div>
           </div>
           <div class="cards">
             <div class="project-title">Project Title</div>
             <p class="project-description">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam."</p>
             <div class="project-icons">
-              <div>1</div>
-              <div>2</div>
-              <div>3</div>
-            </div>
+              <img src="./resources/star-plus-outline.svg" alt="icon of a star" width="30px">
+              <img src="./resources/eye-plus-outline.svg" alt="icon of an eye" width="30px">
+              <img src="./resources/share-variant-outline.svg" alt="icon of sharing symbol" width="30px">            </div>
           </div>
           <div class="cards">
             <div class="project-title">Project Title</div>
             <p class="project-description">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam."</p>
             <div class="project-icons">
-              <div>1</div>
-              <div>2</div>
-              <div>3</div>
-            </div>
+              <img src="./resources/star-plus-outline.svg" alt="icon of a star" width="30px">
+              <img src="./resources/eye-plus-outline.svg" alt="icon of an eye" width="30px">
+              <img src="./resources/share-variant-outline.svg" alt="icon of sharing symbol" width="30px">            </div>
           </div>
           <div class="cards">
             <div class="project-title">Project Title</div>
             <p class="project-description">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam."</p>
             <div class="project-icons">
-              <div>1</div>
-              <div>2</div>
-              <div>3</div>
-            </div>
+              <img src="./resources/star-plus-outline.svg" alt="icon of a star" width="30px">
+              <img src="./resources/eye-plus-outline.svg" alt="icon of an eye" width="30px">
+              <img src="./resources/share-variant-outline.svg" alt="icon of sharing symbol" width="30px">            </div>
           </div>
                 </div>
         </div>
