add icon for notifications

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
           <input type="text" placeholder="   Search..." class="searchbar"></input>
         </div>
         <div class="profile">
-          <div class="bell-icon">Bell</div>
+          <img src="./resources/bell-outline.svg" alt="icon of a group of people" width="30px">
           <div class="avatar-icon">icon</div>
           <div class="name">My Name</div>
         </div>
