add icons and styling

--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
         </div>
         <div class="profile">
           <img src="./resources/bell-outline.svg" alt="icon of a group of people" width="30px">
-          <div class="avatar-icon">icon</div>
+          <img src="./resources/av3.png" alt="avatar icon" width="50px" class="avatar">
           <div class="name">My Name</div>
         </div>
       </div>
       <div class="header-bottom">
         <div class="profile-card">
-          <div class="big-avatar">ICON</div>
+          <img src="./resources/av3.png" alt="avatar icon" width="70px" class="avatar">
           <div class="greeting">
             <div class="hi">Hello,</div>
             <div class="name-handle">My Name (@is-what)</div>
@@ -133,28 +133,28 @@
         <div class="trending">Trending</div>
         <div class="trending-card">
           <div class="random-users">
-            <div class="trending-avatar">AV</div>
+            <img src="./resources/av1.png" alt="avatar icon" width="50px" class="trending-avatar">
             <div class="username-and-handle">
               <div class="handle">@name</div>
               <div class="username">username</div>
             </div>
           </div>
           <div class="random-users">
-            <div class="trending-avatar">AV</div>
+            <img src="./resources/av4.png" alt="avatar icon" width="50px" class="trending-avatar">
             <div class="username-and-handle">
               <div class="handle">@name</div>
               <div class="username">username</div>
             </div>
           </div>
           <div class="random-users">
-            <div class="trending-avatar">AV</div>
+            <img src="./resources/av2.png" alt="avatar icon" width="50px" class="trending-avatar">
             <div class="username-and-handle">
               <div class="handle">@name</div>
               <div class="username">username</div>
             </div>
           </div>
           <div class="random-users">
-            <div class="trending-avatar">AV</div>
+            <img src="./resources/av5.png" alt="avatar icon" width="50px" class="trending-avatar">
             <div class="username-and-handle">
               <div class="handle">@name</div>
               <div class="username">username</div>
