--- a/index.html
+++ b/index.html
@@ -6,10 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Barlow:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
-  <title>Manon's Admin Dashboard</title>
-</head>
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap" rel="stylesheet"></head>
 <body>
   <div class="container">
 
@@ -22,7 +20,7 @@
         <div class="profile">
           <img src="./resources/bell-outline.svg" alt="icon of a group of people" width="30px">
           <img src="./resources/av3.png" alt="avatar icon" width="50px" class="avatar">
-          <div class="name">My Name</div>
+          <div class="name">Manon Lef</div>
         </div>
       </div>
       <div class="header-bottom">
@@ -30,7 +28,7 @@
           <img src="./resources/av3.png" alt="avatar icon" width="70px" class="avatar">
           <div class="greeting">
             <div class="hi">Hello,</div>
-            <div class="name-handle">My Name (@is-what)</div>
+            <div class="name-handle">Manon (@ manon_lef)</div>
           </div>
         </div>
         <div class="buttons">
@@ -62,75 +60,76 @@
 
     <div class="content">
       <div class="projects">
-        <div class="your-projects">Your projects</div>
+        <div class="your-projects">Random Snippets</div>
         <div class="card-container">
           <div class="cards">
-            <div class="project-title">Project Title</div>
-            <p class="project-description">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam."</p>
+            <div class="project-title">Spicy Food</div>
+            <p class="project-description">"It's spicy" is the universal mom code for "I don't want to share"</p>
             <div class="project-icons">
-              <img src="./resources/star-plus-outline.svg" alt="icon of a star" width="30px">
-              <img src="./resources/eye-plus-outline.svg" alt="icon of an eye" width="30px">
-              <img src="./resources/share-variant-outline.svg" alt="icon of sharing symbol" width="30px">
+              <img src="./resources/star-plus-outline.svg" alt="icon of a star" width="30px" class="project-icon">
+              <img src="./resources/eye-plus-outline.svg" alt="icon of an eye" width="30px" class="project-icon">
+              <img src="./resources/share-variant-outline.svg" alt="icon of sharing symbol" width="30px" class="project-icon">
             </div>
           </div>
           <div class="cards">
-            <div class="project-title">Project Title</div>
-            <p class="project-description">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam."</p>
+            <div class="project-title">That's So Punny!</div>
+            <p class="project-description">Jokes about German sausages are the absolute WURST</p>
             <div class="project-icons">
-              <img src="./resources/star-plus-outline.svg" alt="icon of a star" width="30px">
-              <img src="./resources/eye-plus-outline.svg" alt="icon of an eye" width="30px">
-              <img src="./resources/share-variant-outline.svg" alt="icon of sharing symbol" width="30px">            </div>
+              <img src="./resources/star-plus-outline.svg" alt="icon of a star" width="30px" class="project-icon">
+              <img src="./resources/eye-plus-outline.svg" alt="icon of an eye" width="30px" class="project-icon">
+              <img src="./resources/share-variant-outline.svg" alt="icon of sharing symbol" width="30px" class="project-icon">            </div>
           </div>
           <div class="cards">
-            <div class="project-title">Project Title</div>
-            <p class="project-description">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam."</p>
+            <div class="project-title">Helvetica and Times New Roman</div>
+            <p class="project-description">Helvetica and Times New Roman walk into a bar.
+              <br><br>“Get out of here!” shouts the bartender.“We don’t serve your type.”</p>
             <div class="project-icons">
-              <img src="./resources/star-plus-outline.svg" alt="icon of a star" width="30px">
-              <img src="./resources/eye-plus-outline.svg" alt="icon of an eye" width="30px">
-              <img src="./resources/share-variant-outline.svg" alt="icon of sharing symbol" width="30px">            </div>
+              <img src="./resources/star-plus-outline.svg" alt="icon of a star" width="30px" class="project-icon">
+              <img src="./resources/eye-plus-outline.svg" alt="icon of an eye" width="30px" class="project-icon">
+              <img src="./resources/share-variant-outline.svg" alt="icon of sharing symbol" width="30px" class="project-icon">            </div>
           </div>
           <div class="cards">
-            <div class="project-title">Project Title</div>
-            <p class="project-description">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam."</p>
+            <div class="project-title">Christmas or Halloween?</div>
+            <p class="project-description">"Why do programmers confuse Christmas with Halloween?"<br><br>Because OCT 31 is the same as DEC 25.</p>
             <div class="project-icons">
-              <img src="./resources/star-plus-outline.svg" alt="icon of a star" width="30px">
-              <img src="./resources/eye-plus-outline.svg" alt="icon of an eye" width="30px">
-              <img src="./resources/share-variant-outline.svg" alt="icon of sharing symbol" width="30px">            </div>
+              <img src="./resources/star-plus-outline.svg" alt="icon of a star" width="30px" class="project-icon">
+              <img src="./resources/eye-plus-outline.svg" alt="icon of an eye" width="30px" class="project-icon">
+              <img src="./resources/share-variant-outline.svg" alt="icon of sharing symbol" width="30px" class="project-icon">            </div>
           </div>
           <div class="cards">
-            <div class="project-title">Project Title</div>
-            <p class="project-description">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam."</p>
+            <div class="project-title">Facts</div>
+            <p class="project-description">Every time you stretch a font, somewhere, a designer cries.</p>
             <div class="project-icons">
-              <img src="./resources/star-plus-outline.svg" alt="icon of a star" width="30px">
-              <img src="./resources/eye-plus-outline.svg" alt="icon of an eye" width="30px">
-              <img src="./resources/share-variant-outline.svg" alt="icon of sharing symbol" width="30px">            </div>
+              <img src="./resources/star-plus-outline.svg" alt="icon of a star" width="30px" class="project-icon">
+              <img src="./resources/eye-plus-outline.svg" alt="icon of an eye" width="30px" class="project-icon">
+              <img src="./resources/share-variant-outline.svg" alt="icon of sharing symbol" width="30px" class="project-icon">            </div>
           </div>
           <div class="cards">
-            <div class="project-title">Project Title</div>
-            <p class="project-description">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam."</p>
+            <div class="project-title">Some Love</div>
+            <p class="project-description">Last year I did an awkward happy dance when I wrote the first lines in my terminal. Now I made this admin dashboard. I can't thank the amazing community of The Odin Project enough. The Core, Maintainers, all the contributors. Thank you for such an amazing resource.</p>
             <div class="project-icons">
-              <img src="./resources/star-plus-outline.svg" alt="icon of a star" width="30px">
-              <img src="./resources/eye-plus-outline.svg" alt="icon of an eye" width="30px">
-              <img src="./resources/share-variant-outline.svg" alt="icon of sharing symbol" width="30px">            </div>
+              <img src="./resources/star-plus-outline.svg" alt="icon of a star" width="30px" class="project-icon">
+              <img src="./resources/eye-plus-outline.svg" alt="icon of an eye" width="30px" class="project-icon">
+              <img src="./resources/share-variant-outline.svg" alt="icon of sharing symbol" width="30px" class="project-icon">            </div>
           </div>
                 </div>
         </div>
       <div class="content-right">
-        <div class="announcements">Announcements</div>
+        <div class="announcements">Upcoming</div>
         <div class="announcement-card">
           <div class="message">
-            <div class="message-title">announcement</div>
-            <div class="message-body">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt</div>
+            <div class="message-title">Eat Ice Cream for Breakfast day</div>
+            <div class="message-body">February 4, It is thought that the unofficial holiday was first created in the 1960s by Florence Rappaport as a way to entertain her children on a cold and snowy morning.</div>
           </div>
           <hr class="divider">
           <div class="message">
-            <div class="message-title">announcement</div>
-            <div class="message-body">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt</div>
+            <div class="message-title">Wear your PJ's to Work Day</div>
+            <div class="message-body">April 16, While the origins of this fun holiday are unknown, the date of the holiday suggests that it was meant to give taxpayers in the United States a day to relax after Tax Day</div>
           </div>
           <hr class="divider">
           <div class="message">
-            <div class="message-title">announcement</div>
-            <div class="message-body">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt</div>
+            <div class="message-title">Pretend to Be a Time Traveler Day</div>
+            <div class="message-body">December 8, While the origins of this holiday are unknown, we are certain that the creators of this unofficial holiday wanted people to put on their time travel trousers and pretend to be time travelers.</div>
           </div>
         </div>
         <div class="trending">Trending</div>
@@ -138,31 +137,32 @@
           <div class="random-users">
             <img src="./resources/av1.png" alt="avatar icon" width="50px" class="trending-avatar">
             <div class="username-and-handle">
-              <div class="handle">@name</div>
-              <div class="username">username</div>
+              <div class="handle">@ Mighty-Mateo</div>
+              <div class="username">Mightiest Mateo</div>
             </div>
           </div>
           <div class="random-users">
             <img src="./resources/av4.png" alt="avatar icon" width="50px" class="trending-avatar">
             <div class="username-and-handle">
-              <div class="handle">@name</div>
-              <div class="username">username</div>
+              <div class="handle">@ Alejandro-Aviator </div>
+              <div class="username">Pilot Alejandro</div>
             </div>
           </div>
           <div class="random-users">
             <img src="./resources/av2.png" alt="avatar icon" width="50px" class="trending-avatar">
             <div class="username-and-handle">
-              <div class="handle">@name</div>
-              <div class="username">username</div>
+              <div class="handle">@ Lolling-Lucas</div>
+              <div class="username">Funniest Guy in the world</div>
             </div>
           </div>
           <div class="random-users">
             <img src="./resources/av5.png" alt="avatar icon" width="50px" class="trending-avatar">
             <div class="username-and-handle">
-              <div class="handle">@name</div>
-              <div class="username">username</div>
+              <div class="handle">@ Judgey-Jude</div>
+              <div class="username">Jude</div>
             </div>
           </div>
+          <div class="credit">avatars by<a href="https://www.freepik.com/free-vector/hand-drawn-people-avatar-collection_4077393.htm">Freepik</a></div>
         </div>
       </div> 
     </div>
